# synapse

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LLM.md  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  errors.rs  explore.rs  git.rs  lib.rs  main.rs  repo.rs  share.rs
src/graph/: ladybug_store.rs  memory_store.rs  mod.rs  model.rs  store.rs
src/indexer/: dotnet.rs  languages.rs  mod.rs  node.rs  tree_sitter.rs
src/output/: json.rs  mod.rs  table.rs
src/pack/: budget.rs  json.rs  markdown.rs  mod.rs  selector.rs
tests/: cli.rs  ladybug_smoke.rs  unit.rs
tests/fixtures/bash/: deploy.sh
tests/fixtures/csharp/: SftpAutoReceiveCommandHandler.cs
tests/fixtures/dotnet/: Sample.csproj
tests/fixtures/dotnet/cpm/: Directory.Build.props  Directory.Packages.props
tests/fixtures/dotnet/cpm/src/Worker/: Worker.csproj
tests/fixtures/go/: ledger.go
tests/fixtures/javascript/: cart.js
tests/fixtures/json/: config.json
tests/fixtures/markdown/: guide.md
tests/fixtures/node/: package.json
tests/fixtures/python/: service.py
tests/fixtures/rust/: widget.rs
tests/fixtures/svelte/: TenantSwitcher.svelte
tests/fixtures/svelte/routes/dashboard/: +page.svelte
tests/fixtures/typescript/: TenantSwitcher.tsx  billing.ts
tests/fixtures/yaml/: compose.yaml
