[package]
name = "synapse"
version = "0.2.2"
edition = "2024"

[[bin]]
name = "synapse"
path = "src/main.rs"

[features]
default = ["ladybug", "share"]
ladybug = ["dep:lbug"]
# Share the indexed graph via an OCI registry (`synapse push` / `pull`).
# Pulls in an async (tokio) + TLS stack, so it's a toggle for lean builds.
share = ["dep:oci-client", "dep:tokio", "dep:docker_credential"]

[dependencies]
lbug = { version = "0.17.0", optional = true }
oci-client = { version = "0.17", default-features = false, features = [
    "rustls-tls",
], optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
docker_credential = { version = "1.3", optional = true }
anyhow = "1.0.102"
blake3 = "1.8.5"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
globset = "0.4.18"
ignore = "0.4.25"
rayon = "1.10"
quick-xml = "0.40.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tree-sitter = "0.26.9"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-svelte-ng = "1.0.2"
tree-sitter-bash = "0.25.1"
tree-sitter-yaml = "0.7.2"
tree-sitter-json = "0.24.8"
tree-sitter-md = "0.5.3"
indicatif = "0.18.4"
